# bluerov2_exercise

./: readme.md
src/: .gitignore  Dockerfile  bluerov2.rosinstall
src/bluerov2_agent/: CMakeLists.txt  Dockerfile  bluerov2.rosinstall  package.xml  readme.md  setup.cfg  setup.py
src/bluerov2_agent/bluerov2_agent/: bluerov2.py
src/bluerov2_agent/launch/: bluerov_bringup.launch.py  bluerov_ign_sim.launch.py
